--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@
 MONGO_URI=mongodb://localhost:27017/ecommerce
 JWT_SECRET=poné_tu_clave_secreta_aqui
 PORT=3000
+MAIL_USER=example@gmail.com
+MAIL_PASS=app_pass
+JWT_SECRET=mi_clave_secreta_para_jwt
